[tool.poetry]
name = "kozmoai-cli"
version = "1.1.7"
description = "Investment Research for Everyone, Anywhere."
authors = ["KozmoAI <hello@kozmoai.co>"]
packages = [{ include = "kozmoai_cli" }]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://kozmoai.co"
repository = "https://github.com/digitranslab/kozmoai-finance"
documentation = "https://docs.kozmoai.co/cli"

[tool.poetry.scripts]
kozmoai = 'kozmoai_cli.cli:main'

[tool.poetry.dependencies]
python = "^3.9,<3.13"

# KozmoAI dependencies
kozmoai = { version = "^4.4.1", extras = ["all"] }

# CLI dependencies
prompt-toolkit = "^3.0.50"
rich = "^13.9.4"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
pywry = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
