[tool.poetry]
name = "kozmoai-currency"
version = "1.4.0"
description = "Currency extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_currency" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_core_extension"]
currency = "kozmoai_currency.currency_router:router"

[tool.poetry.plugins."kozmoai_charting_extension"]
currency = "kozmoai_currency.currency_views:CurrencyViews"
