[tool.poetry]
name = "kozmoai-derivatives"
version = "1.4.0"
description = "Derivatives extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_derivatives" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_core_extension"]
derivatives = "kozmoai_derivatives.derivatives_router:router"

[tool.poetry.plugins."kozmoai_charting_extension"]
derivatives = "kozmoai_derivatives.derivatives_views:DerivativesViews"
