[tool.poetry]
name = "kozmoai-econometrics"
version = "1.5.1"
description = "Econometrics Toolkit for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_econometrics" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"  # scipy forces python <4.0 explicitly
kozmoai-core = "^1.4.2"
pandas-ta-kozmoai = "^0.4.20"
arch = "^7.2"
linearmodels = "^6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_core_extension"]
econometrics = "kozmoai_econometrics.econometrics_router:router"

[tool.poetry.plugins."kozmoai_charting_extension"]
econometrics = "kozmoai_econometrics.econometrics_views:EconometricsViews"