[tool.poetry]
name = "kozmoai-econometrics"
version = "1.5.1"
description = "Econometrics Toolkit for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_econometrics" }]

[tool.poetry.dependencies]
python = ">=3.9.21,<3.13"
kozmoai-core = "^1.4.2"
pandas-ta-kozmoai = { path = "../../../pandas_ta_kozmoai", develop = true }
statsmodels = "^0.14.0"
scikit-learn = "^1.6.0"
kneed = ">=0.8.5,<0.9.0"
arch = "^7.2"
linearmodels = "^6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_core_extension"]
econometrics = "kozmoai_econometrics.econometrics_router:router"

[tool.poetry.plugins."kozmoai_charting_extension"]
econometrics = "kozmoai_econometrics.econometrics_views:EconometricsViews"