[tool.poetry]
name = "kozmoai-economy"
version = "1.4.0"
description = "Economy extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_economy" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_core_extension"]
economy = "kozmoai_economy.economy_router:router"

[tool.poetry.plugins."kozmoai_charting_extension"]
economy = "kozmoai_economy.economy_views:EconomyViews"
