[tool.poetry]
name = "kozmoai-fixedincome"
version = "1.4.2"
description = "Fixed income extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_fixedincome" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_core_extension"]
fixedincome = "kozmoai_fixedincome.fixedincome_router:router"

[tool.poetry.plugins."kozmoai_charting_extension"]
fixedincome = "kozmoai_fixedincome.fixedincome_views:FixedIncomeViews"
