[tool.poetry]
name = "kozmoai-index"
version = "1.4.0"
description = "Index extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_index" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_core_extension"]
index = "kozmoai_index.index_router:router"

[tool.poetry.plugins."kozmoai_charting_extension"]
index = "kozmoai_index.index_views:IndexViews"
