[tool.poetry]
name = "kozmoai-quantitative"
version = "1.4.1"
description = "Quantitative Analysis extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_quantitative" }]

[tool.poetry.dependencies]
python = ">=3.9.21,<3.13"
kozmoai-core = "^1.4.2"
pandas-ta-kozmoai = { path = "../../../pandas_ta_kozmoai", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_core_extension"]
quantitative = "kozmoai_quantitative.quantitative_router:router"

[tool.poetry.plugins."kozmoai_charting_extension"]
quantitative = "kozmoai_quantitative.quantitative_views:QuantitativeViews"
