[tool.poetry]
name = "kozmoai-regulators"
version = "1.4.1"
description = "Markets and Agency Regulators extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_regulators" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kozmoai-core = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_core_extension"]
regulators = "kozmoai_regulators.regulators_router:router"
