[tool.poetry]
name = "kozmoai-charting"
version = "2.3.2"
description = "Charting extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_charting" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"  # scipy forces python <4.0 explicitly
kozmoai-core = "^1.4.0"
pandas-ta-kozmoai = "^0.4.20"
plotly = "^5.24.1"
pywry = { version = "^0.6.2", optional = true }
nbformat = "^5.10.0"

[tool.poetry.extras]
pywry = ["pywry"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_obbject_extension"]
kozmoai_charting = "kozmoai_charting:ext"
