[tool.poetry]
name = "kozmoai-charting"
version = "2.3.2"
description = "Charting extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_charting" }]

[tool.poetry.dependencies]
python = ">=3.9.21,<3.13"
kozmoai-core = "^1.4.2"
pandas-ta-kozmoai = { path = "../../../pandas_ta_kozmoai", develop = true }
matplotlib = "^3.7.2"
mplfinance = "^0.12.10b0"
pywry = { version = "^0.6.2", optional = true }
nbformat = "^5.10.0"

[tool.poetry.extras]
pywry = ["pywry"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_obbject_extension"]
kozmoai_charting = "kozmoai_charting:ext"

[tool.poetry.plugins."kozmoai_core_extension"]
charting = "kozmoai_charting.charting_router:router"
