[tool.poetry]
name = "kozmoai-benzinga"
version = "1.4.0"
description = "Benzinga extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_benzinga" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_provider_extension"]
benzinga = "kozmoai_benzinga:benzinga_provider"
