[tool.poetry]
name = "kozmoai-cboe"
version = "1.4.0"
description = "CBOE extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_cboe" }]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp-client-cache = "^0.11.0"
aiosqlite = "^0.20.0"
kozmoai-core = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_provider_extension"]
cboe = "kozmoai_cboe:cboe_provider"
