[tool.poetry]
name = "kozmoai-deribit"
version = "1.0.0"
description = "Deribit is a crypto-native derivatives exchange."
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_deribit" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"
async-lru = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_provider_extension"]
deribit = "kozmoai_deribit:deribit_provider"
