[tool.poetry]
name = "kozmoai-ecb"
version = "1.4.1"
description = "ECB extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_ecb" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"
xmltodict = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_provider_extension"]
ecb = "kozmoai_ecb:ecb_provider"
