[tool.poetry]
name = "kozmoai-us-eia"
version = "1.1.0"
description = "The U.S. Energy Information Administration is committed to its free and open data by making it available through an Application Programming Interface (API) and its open data tools. See https://www.eia.gov/opendata/ for more information."
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_us_eia" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"
async-lru = "^2.0.4"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_provider_extension"]
us_eia = "kozmoai_us_eia:eia_provider"
