[tool.poetry]
name = "kozmoai-finviz"
version = "1.3.0"
description = "Finviz extension for KozmoAI"
authors = ["KozmoAI Team <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_finviz" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"
finvizfinance = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_provider_extension"]
finviz = "kozmoai_finviz:finviz_provider"
