[tool.poetry]
name = "kozmoai-government-us"
version = "1.4.0"
description = "US Government Data Extension for KozmoAI"
authors = ["KozmoAI <hello@kozmoai.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "kozmoai_government_us" }]

[tool.poetry.dependencies]
python = "^3.9"
kozmoai-core = "^1.4.2"
random-user-agent = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."kozmoai_provider_extension"]
government_us = "kozmoai_government_us:government_us_provider"
